# braza

./: .~lock.sec_atualiza.docx#  LICENSE  Model_README.md.docx  README.md
contracts/braza_token/: .env.example  .gitignore  Cargo.toml  Makefile  README.md  tarpaulin-report.html
contracts/braza_token/.soroban/: contract-id-testnet.txt
contracts/braza_token/scripts/: build.sh  clean.sh  deploy-all.sh  deploy.sh  initialize.sh  load-env.sh  verify.sh
contracts/braza_token/src/: admin.rs  compliance.rs  compliance_cache.rs  events.rs  lib.rs  storage.rs  token.rs  types.rs  validation.rs  vesting.rs
contracts/braza_token/test_snapshots/: debug_admin_transfer.1.json  debug_country_validation.1.json  debug_kyc_validation.1.json  edge_case_vesting_after_duration.1.json  edge_case_vesting_exactly_at_cliff.1.json  fuzz_allowance_random_amounts.1.json  fuzz_stateful_sequence.1.json  fuzz_stateful_sequence.10.json  fuzz_stateful_sequence.11.json  fuzz_stateful_sequence.12.json  fuzz_stateful_sequence.13.json  fuzz_stateful_sequence.14.json  fuzz_stateful_sequence.15.json  fuzz_stateful_sequence.16.json  fuzz_stateful_sequence.17.json  fuzz_stateful_sequence.18.json  fuzz_stateful_sequence.19.json  fuzz_stateful_sequence.2.json  fuzz_stateful_sequence.20.json  fuzz_stateful_sequence.21.json  fuzz_stateful_sequence.22.json  fuzz_stateful_sequence.23.json  fuzz_stateful_sequence.24.json  fuzz_stateful_sequence.25.json  fuzz_stateful_sequence.26.json  fuzz_stateful_sequence.27.json  fuzz_stateful_sequence.28.json  fuzz_stateful_sequence.29.json  fuzz_stateful_sequence.3.json  (+264 more)
(+27 files in other folders)
